--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "animejs": "^3.2.1",
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
@@ -13,6 +14,7 @@
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
+    "swiper": "^8.4.6",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
